fix object-fit on IE

--- a/src/blocks/product-cover/product-cover.styl
+++ b/src/blocks/product-cover/product-cover.styl
@@ -43,6 +43,15 @@
 		width 100%
 		height 100%
 		object-fit cover
+		.no-objectfit &
+			position absolute
+			top 50%
+			left 50%
+			width auto !important
+			height auto !important
+			min-width 100%
+			min-height 100%
+			transform translate(-50%, -50%)
 		&-wrapper
 			position relative
 			width 50%
@@ -111,7 +120,7 @@
 		overflow hidden
 		top 5%
 		visibility hidden
-		
+
 		@media md
 			right 10%
 			bottom 5%
